using grey accent color in background of app icon item

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,7 +55,6 @@
             android:enabled="true"
             android:icon="@mipmap/ic_launcher_red"
             android:logo="@mipmap/ic_launcher_red"
-            android:roundIcon="@mipmap/ic_launcher_red_round"
             android:targetActivity="com.duckduckgo.app.launch.LaunchActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -68,7 +67,6 @@
             android:enabled="false"
             android:icon="@mipmap/ic_launcher_blue"
             android:logo="@mipmap/ic_launcher_blue"
-            android:roundIcon="@mipmap/ic_launcher_blue_round"
             android:targetActivity="com.duckduckgo.app.launch.LaunchActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -81,7 +79,6 @@
             android:enabled="false"
             android:icon="@mipmap/ic_launcher_black"
             android:logo="@mipmap/ic_launcher_black"
-            android:roundIcon="@mipmap/ic_launcher_black_round"
             android:targetActivity="com.duckduckgo.app.launch.LaunchActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -94,7 +91,6 @@
             android:enabled="false"
             android:icon="@mipmap/ic_launcher_gold"
             android:logo="@mipmap/ic_launcher_gold"
-            android:roundIcon="@mipmap/ic_launcher_gold_round"
             android:targetActivity="com.duckduckgo.app.launch.LaunchActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -107,7 +103,6 @@
             android:enabled="false"
             android:icon="@mipmap/ic_launcher_green"
             android:logo="@mipmap/ic_launcher_green"
-            android:roundIcon="@mipmap/ic_launcher_green_round"
             android:targetActivity="com.duckduckgo.app.launch.LaunchActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -120,7 +115,6 @@
             android:enabled="false"
             android:icon="@mipmap/ic_launcher_purple"
             android:logo="@mipmap/ic_launcher_purple"
-            android:roundIcon="@mipmap/ic_launcher_purple_round"
             android:targetActivity="com.duckduckgo.app.launch.LaunchActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -133,7 +127,6 @@
             android:enabled="false"
             android:icon="@mipmap/ic_launcher_white"
             android:logo="@mipmap/ic_launcher_white"
-            android:roundIcon="@mipmap/ic_launcher_white_round"
             android:targetActivity="com.duckduckgo.app.launch.LaunchActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -145,6 +138,7 @@
             android:name="com.duckduckgo.app.launch.LauncherSilhoutte"
             android:enabled="false"
             android:icon="@mipmap/ic_launcher_silhouette"
+            android:logo="@mipmap/ic_launcher_silhouette"
             android:targetActivity="com.duckduckgo.app.launch.LaunchActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
