fixed wrong category in Manifest, moving settings option to bottom of general content

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,7 +45,8 @@
             android:roundIcon="${appIconRound}"
             android:label="@string/appName">
             <intent-filter>
-                <category android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.INFO"/>
             </intent-filter>
         </activity>
 
