added swipe to refresh

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -99,6 +99,7 @@ ext {
     materialDesign = "1.1.0-alpha05"
     architectureComponents = "1.1.1"
     architectureComponentsExtensions = "1.1.1"
+    swipeRefresh = "1.0.0"
     androidKtx = "1.0.2"
     fragmentKtx = "1.0.0"
     constraintLayout = "2.0.0-beta1"
@@ -150,6 +151,7 @@ dependencies {
     implementation "androidx.appcompat:appcompat:$androidX"
     implementation "com.google.android.material:material:$materialDesign"
     implementation "androidx.constraintlayout:constraintlayout:$constraintLayout"
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:$swipeRefresh"
     implementation "androidx.webkit:webkit:$webkit"
     implementation "com.squareup.okhttp3:okhttp:$okHttp"
     implementation "com.squareup.retrofit2:retrofit:$retrofit"
