--- a/app/build.gradle
+++ b/app/build.gradle
@@ -96,6 +96,7 @@ android {
 
 ext {
     androidX = "1.0.2"
+    swipeRefreshLayout = "1.0.0"
     materialDesign = "1.1.0-alpha05"
     architectureComponents = "1.1.1"
     architectureComponentsExtensions = "1.1.1"
@@ -150,6 +151,7 @@ dependencies {
     implementation "androidx.appcompat:appcompat:$androidX"
     implementation "com.google.android.material:material:$materialDesign"
     implementation "androidx.constraintlayout:constraintlayout:$constraintLayout"
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:$swipeRefreshLayout"
     implementation "androidx.webkit:webkit:$webkit"
     implementation "com.squareup.okhttp3:okhttp:$okHttp"
     implementation "com.squareup.retrofit2:retrofit:$retrofit"
