--- a/app/build.gradle
+++ b/app/build.gradle
@@ -99,7 +99,7 @@ ext {
     materialDesign = "1.1.0-alpha05"
     architectureComponents = "1.1.1"
     architectureComponentsExtensions = "1.1.1"
-    androidKtx = "1.0.2"
+    androidKtxCore = "1.2.0"
     fragmentKtx = "1.0.0"
     constraintLayout = "2.0.0-beta1"
     lifecycle = "2.1.0-alpha04"
@@ -171,7 +171,7 @@ dependencies {
     implementation "org.jetbrains.anko:anko-design:$ankoVersion"
 
     // Android KTX
-    implementation "androidx.core:core-ktx:$androidKtx"
+    implementation "androidx.core:core-ktx:$androidKtxCore"
     implementation "androidx.fragment:fragment-ktx:$fragmentKtx"
 
     // ViewModel and LiveData
