--- a/app/build.gradle
+++ b/app/build.gradle
@@ -102,7 +102,7 @@ ext {
     androidKtxCore = "1.2.0"
     fragmentKtx = "1.2.3"
     constraintLayout = "2.0.0-beta1"
-    lifecycle = "2.1.0-alpha04"
+    lifecycle = "2.2.0"
     room = "2.2.5"
     workManager = "2.3.4"
     legacySupport = "1.0.0"
