--- a/app/build.gradle
+++ b/app/build.gradle
@@ -96,7 +96,7 @@ android {
 
 ext {
     androidX = "1.1.0"
-    materialDesign = "1.1.0-alpha05"
+    materialDesign = "1.1.0"
     architectureComponents = "1.1.1"
     architectureComponentsExtensions = "1.1.1"
     androidKtxCore = "1.2.0"
