--- a/app/build.gradle
+++ b/app/build.gradle
@@ -111,6 +111,7 @@ ext {
     coroutines = "1.3.5"
     retrofitCoroutinesAdapter = "0.9.2"
     webkit = "1.2.0"
+    referrerLibrary = "1.1.2"
 
     junit = "4.12"
     dagger = "2.18"
@@ -127,7 +128,6 @@ ext {
     mockito = "2.18.3"
     mockitoKotlin = "2.0.0"
     commonsMath = "3.6.1"
-    referrerLibrary = "1.0"
 }
 
 
@@ -136,10 +136,6 @@ dependencies {
     debugImplementation "com.squareup.leakcanary:leakcanary-android:$leakCanary"
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-
-    implementation("com.android.installreferrer:installreferrer:$referrerLibrary") {
-        because "noinspection GradleDependency - 1.1 has a bug which causes a crash"
-    }
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines"
@@ -207,6 +203,10 @@ dependencies {
     // Apache commons
     implementation "org.apache.commons:commons-math3:$commonsMath"
 
+    // Play Store referrer library
+    implementation("com.android.installreferrer:installreferrer:$referrerLibrary")
+
+    // Testing dependencies
     testImplementation "org.mockito:mockito-core:$mockito"
     testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:$mockitoKotlin"
     testImplementation "junit:junit:$junit"
