--- a/app/build.gradle
+++ b/app/build.gradle
@@ -95,7 +95,7 @@ android {
 }
 
 ext {
-    androidX = "1.1.0"
+    androidX = "1.2.0-beta01"
     materialDesign = "1.2.0-alpha05"
     architectureComponents = "1.1.1"
     architectureComponentsExtensions = "1.1.1"
