--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -224,6 +224,10 @@
             android:label="@string/tabActivityTitle" />
 
         <activity
+            android:name="com.duckduckgo.app.tabs.ui.TabSwitcherBottomBarExperimentActivity"
+            android:label="@string/tabActivityTitle" />
+
+        <activity
             android:name="com.duckduckgo.app.privacy.ui.PrivacyDashboardActivity"
             android:label="@string/privacyDashboardActivityTitle"
             android:parentActivityName=".BrowserActivity" />
