--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,7 @@ ext {
 
 android {
     compileSdkVersion 28
+    ndkVersion '21.0.6113669'
     defaultConfig {
         applicationId "com.duckduckgo.mobile.android"
         minSdkVersion 21
