--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -280,6 +280,10 @@
             android:label="@string/bookmarksActivityTitle"
             android:parentActivityName=".BrowserActivity" />
         <activity
+            android:name="com.duckduckgo.app.fire.preservewebsite.ui.PreserveWebsiteActivity"
+            android:label="@string/preserveWebsiteActivityTitle"
+            android:parentActivityName="com.duckduckgo.app.settings.SettingsActivity" />
+        <activity
             android:name="com.duckduckgo.app.fire.FireActivity"
             android:process="@string/fireProcessName" />
         <activity
