Feature/craig/migrate sync to work manager (#824)
* Add WorkManager RxJava support

* Migrate app config sync from JobScheduler to WorkManager

* Code tidy

* Add sync configuration scheduling tests

* Code tidy

Co-authored-by: David Gonzalez <malmstein@gmail.com>

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -188,6 +188,7 @@ dependencies {
     // WorkManager
     implementation "androidx.work:work-runtime-ktx:$workManager"
     androidTestImplementation "androidx.work:work-testing:$workManager"
+    implementation "androidx.work:work-rxjava2:$workManager"
 
     // Dagger
     kapt "com.google.dagger:dagger-android-processor:$dagger"
